--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
     "@popperjs/core": "^2.11.8",
     "aos": "^3.0.0-beta.6",
     "glightbox": "^3.3.0",
